# FastML

./: .gitignore  CMakeLists.txt  vcpkg.json
app/: CMakeLists.txt  main.cxx
app/core/: visualizer.cxx  visualizer.hxx
examples/: CMakeLists.txt  Makefile  cmake_install.cmake  pla.cxx
include/: Makefile  cmake_install.cmake
include/fastml/: errors.hxx
include/fastml/math/: matrix.hxx  vector.hxx
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/fastml/math/: matrix.cxx  vector.cxx
tests/: CMakeLists.txt  math.cxx
